// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCard should render correctly 1`] = `
<div
  className="MuiPaper-root MuiCard-root root MuiPaper-elevation1"
>
  <button
    className="MuiButtonBase-root MuiCardActionArea-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rect media MuiSkeleton-wave"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <img
      alt="Rick Sanchez"
      className="media"
      component="img"
      onError={[Function]}
      onLoad={[Function]}
      src=""
      style={
        Object {
          "display": "none",
        }
      }
    />
    <div
      className="content"
    >
      <h6
        className="MuiTypography-root text MuiTypography-h6 MuiTypography-gutterBottom"
      >
        Rick Sanchez
      </h6>
    </div>
    <span
      className="MuiCardActionArea-focusHighlight"
    />
  </button>
</div>
`;

exports[`CharacterCard should render without crashing with corrupted backend data 1`] = `
<div
  className="MuiPaper-root MuiCard-root root MuiPaper-elevation1"
>
  <button
    className="MuiButtonBase-root MuiCardActionArea-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rect media MuiSkeleton-wave"
      style={
        Object {
          "height": undefined,
          "width": undefined,
        }
      }
    />
    <img
      alt=""
      className="media"
      component="img"
      onError={[Function]}
      onLoad={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
    />
    <div
      className="content"
    >
      <h6
        className="MuiTypography-root text MuiTypography-h6 MuiTypography-gutterBottom"
      />
    </div>
    <span
      className="MuiCardActionArea-focusHighlight"
    />
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;
